# micro-media

./: .gitignore  README.md  deploy.sh  docker-compose.no_ssl.yml  docker-compose.override.yml.example  docker-compose.ssl.yml  docker-compose.yml  release.sh
.github/workflows/: build.yml
api/: .env.example  Dockerfile  README.md  alembic.ini  api_keys.json.example  entrypoint.sh  media.yml.example  prod.env.example  pyproject.toml  storage.yml.example
api/micro_media/: auth.py  main.py
api/micro_media/exception_handlers/: __init__.py  media.py  sqlalchemy.py
api/micro_media/media/: __init__.py  config.py  context.py  exceptions.py  manager.py  thumbnails.py  utils.py
api/micro_media/models/: __init__.py  base.py  media.py
api/micro_media/routers/v1/: __init__.py
api/micro_media/routers/v1/internal/: __init__.py  media.py
api/micro_media/routers/v1/public/: __init__.py  media.py
api/micro_media/routers/v1/user/: __init__.py  media.py
api/micro_media/schemas/: __init__.py  user.py
api/micro_media/schemas/v1/: __init__.py  media.py
api/micro_media/schemas/v1/internal/: __init__.py  media.py
api/micro_media/settings/: base.py  utils.py
api/micro_media/storage/: __init__.py  config.py  context.py  exceptions.py  manager.py
api/micro_media/utils/: __init__.py  cache.py  etc.py  schema.py  sqlalchemy.py
api/migrations/: env.py
api/migrations/versions/: 0e2d1d7fc3cb_init.py  52f15221fa1e_media_ack.py  790bcd7683f6_user_created_ack_at.py
imgproxy/: prod.env.example
postgres/: init.sql  prod.env.example
